# coronet

./: .gitignore  .gitmodules  CMakeLists.txt  makefile  solution.cmd
include/coronet/: async.h  error.h  events.h  handle.h  server.h  signal.h  socket.h
src/: coronet_server.cpp  sockets_client.cpp  sockets_server.cpp  winsock_client.cpp  winsock_server.cpp
src/coronet/: address.h  error.cpp  signal.cpp
src/coronet/epoll/: event.h  events.cpp  server.cpp  socket.cpp
src/coronet/iocp/: event.h  events.cpp  server.cpp  socket.cpp
src/coronet/kqueue/: event.h  events.cpp  server.cpp  socket.cpp
